# WebAR-YOLOv8

./: README.md
backend/: pyproject.toml
backend/src/backend/: main.py
front/nextjs-ar/: bun.lockb  package.json
front/nextjs-ar/src/app/: page.tsx
front/nextjs-ar/src/components/: FlaskFetch.tsx  camera.tsx
nextjs-ar/: bun.lockb  package.json
nextjs-ar/src/app/: page.tsx
nextjs-ar/src/components/: camera.tsx
