[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Amo_Taiki_from_Desktop", email = "c1101081@planet.kanazawa-it.ac.jp" }
]
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
